--- a/WeixinMPToPDF/MainWindow.xaml
+++ b/WeixinMPToPDF/MainWindow.xaml
@@ -6,9 +6,10 @@
         xmlns:local="clr-namespace:WeixinMPToPDF"
         mc:Ignorable="d"
         DataContext="{Binding Main, Source={StaticResource Locator}}"
-        Title="MainWindow" Height="90" Width="500">
+        Title="MainWindow" Height="120" Width="500">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
@@ -26,8 +27,12 @@
             <Label>输入Url</Label>
             <TextBox Grid.Column="1" Text="{Binding Url}" VerticalContentAlignment="Center"></TextBox>
         </Grid>
-        <Label Grid.Row="1" Content="{Binding Status}" Grid.ColumnSpan="2"></Label>
-        <Button Grid.Row="1" Grid.Column="2" Margin="2" Command="{Binding DownloadImageCommand}">下载图片</Button>
-        <Button Grid.Row="1" Grid.Column="3" Margin="2" Command="{Binding MakePdfCommand}">生成PDF</Button>
+        <Label Grid.Row="1" Grid.Column="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">CSS选择器</Label>
+        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding CssPath}" VerticalContentAlignment="Center"></TextBox>
+        <Label Grid.Row="1" Grid.Column="2" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">属性</Label>
+        <TextBox Grid.Row="1" Grid.Column="3" Text="{Binding ValuePath}" VerticalContentAlignment="Center"></TextBox>
+        <Label Grid.Row="2" Content="{Binding Status}" Grid.ColumnSpan="2"></Label>
+        <Button Grid.Row="2" Grid.Column="2" Margin="2" Command="{Binding DownloadImageCommand}">下载图片</Button>
+        <Button Grid.Row="2" Grid.Column="3" Margin="2" Command="{Binding MakePdfCommand}">生成PDF</Button>
     </Grid>
 </Window>
